--- a/css/default.css
+++ b/css/default.css
@@ -64,7 +64,7 @@ pre {
    word-wrap: break-word;
 }
 
-blockquote, q { quotes: &#8220 &#8220; }
+blockquote, q { quotes: '&#8220' '&#8220'; }
 
 blockquote:before, blockquote:after,
 q:before, q:after {
@@ -446,7 +446,7 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
    font: 16px/30px 'opensans-bold', sans-serif;
-   background: #423F6C;
+   background: #8B93C4;
    display: inline-block;
 	text-decoration: none;
    letter-spacing: 0;
