--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body { background: #0f0f0f; overflow-y: hidden; }
   -o-transition: all .3s;
 }
 
-.section-title:after {
+/*.section-title:after {
   background: none repeat scroll 0 0 #fff;
   bottom: -15px;
   color: #333;
@@ -32,7 +32,7 @@ body { background: #0f0f0f; overflow-y: hidden; }
   padding: 15px 5px;
   position: absolute;
   font-family: "FontAwesome";
-}
+} */
 
 /* Preloader CSS */
 
@@ -102,7 +102,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/bg.jpg) no-repeat top center;
+   background: #fff url(../images/bg.jpg) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -121,7 +121,7 @@ header .banner {
    vertical-align: middle;
    margin: 0 auto;
    width: 85%;
-   padding-bottom: 30px;s
+   padding-bottom: 30px;
    text-align: center;
    z-index: 1;
    position: relative;
@@ -130,10 +130,10 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font-family: 'Raleway', sans-serif;
-   color: #fff;
+   color: #384D82;
    letter-spacing: 2px;
    margin: 0 auto 40px;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+   /*text-shadow: 0px 1px 2px rgba(0, 0, 0, .8); */
    /*text-shadow: 1px 1px 1px #000000; */
 }
 
@@ -145,16 +145,17 @@ header .banner-text h1 span {
 
 header .banner-text h3 {
    font-family: 'Raleway', sans-serif;
-   color: #FEFEFE;
+   color: #384565;
    margin: 0 auto;
    width: 70%;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+   /*text-shadow: 0px 1px 2px rgba(0, 0, 0, .8); */
 }
+/*
 header .banner-text h3 span,
 header .banner-text h3 a {
    color: #fff;
    font-weight: bold;
-}
+} */
 header .banner-text hr {
    width: 60%;
    margin: 18px auto 24px auto;
@@ -182,7 +183,7 @@ header .banner-text hr {
 /* social links */
 
 #social {
-   background: rgba(0,0,0, .4);
+   background: rgba(15,33,78, .55);
    position: absolute;
    bottom: 0;
    left: 0;
@@ -213,7 +214,7 @@ header .banner-text hr {
    padding: 0;
 }
 .social-container .social li a { color: #fff; }
-.social-container .social li a:hover { color: #D04E5B; }
+.social-container .social li a:hover { color: #F78B44; }
 
 /* scrolldown link */
 header .scrolldown a {  
@@ -251,7 +252,7 @@ header .scrolldown a {
 } 
 
 
-header .scrolldown a:hover { color: #D04E5B; }
+header .scrolldown a:hover { color: #F78B44; }
 
 /* primary navigation */
 #m-nav ul, #m-nav li, #m-nav a {
@@ -273,9 +274,9 @@ header .scrolldown a:hover { color: #D04E5B; }
    position: fixed;
    left: 0;
    top: 0;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+   /* text-shadow: 0px 1px 2px rgba(0, 0, 0, .8); */
 }
-.opaque { background-color: #333; }
+.opaque { background-color: #F8F8FE; }
 
 /* hide toggle button */
 #m-nav > a.mobile-btn { display: none; }
@@ -304,7 +305,8 @@ ul#nav li a {
    line-height: 32px;
 	 text-decoration: none;
    text-align: center;
-   color: #fff;
+   /*color: #fff; */
+   color: #384565;
    font-weight: 700;
 
 	-webkit-transition: all .2s ease-in-out;
@@ -318,11 +320,12 @@ ul#nav li a:active {
   background-color: transparent !important; 
 }
 ul#nav li.current a { 
-  color:#ed5565;
+  /*color:#ed5565; */
+  color: #F78B44;
 }
 
 ul#nav li a:hover { 
-  color:#ed5565;
+  color:#F78B44;
   border-bottom: 2px solid #fff;
 }
 
@@ -330,12 +333,13 @@ ul#nav li a:hover {
 /* About Section */
 
 #about {
-  background: url(../images/2.jpg) no-repeat fixed center center / cover;        
+  /* background: url(../images/2.jpg) no-repeat fixed center center / cover;    */
+  color: #fff;     
   overflow: hidden;
 }
 
 #about a, #about a:visited  { color: #fff; }
-#about a:hover, #about a:focus { color: #D04E5B; }
+#about a:hover, #about a:focus { color: #F78B44; }
 
 #about h1 {
    color: #fff;
@@ -352,15 +356,15 @@ ul#nav li a:hover {
 #about h2 {
    font: 22px/30px 'Open Sans', sans-serif;
    font-weight: 700;
-   color: #fff;
+   color: #384565;
    margin-bottom: 12px;
    text-align: center;
 }
 
 
 #about h3 {
-  border-bottom: 3px solid #fff;
-  color: #fff;
+  border-bottom: 3px solid #384565;
+  color: #384565;
   font: 400 18px/24px "Raleway",sans-serif;
   margin-bottom: 15px;
   padding-bottom: 10px;
@@ -369,15 +373,15 @@ ul#nav li a:hover {
 
 
 
-#about .section-title:after {
+/* #about .section-title:after {
   background: rgba(0,0,0,0.2);
   color: #fff;
   content: "\f007";
-}
+} */
 
 #about p {
    line-height: 30px;
-   color: #fff;
+   color: #384565;
 }
 
 .pp-container {
@@ -388,9 +392,11 @@ ul#nav li a:hover {
 }
 
 #about .profile-pic {
-  border: 5px solid #b1b2b4;
+  border: 5px solid #EDEFFB;
   border-radius: 100%;
-  box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.2);
+  /*box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 0 0 10px rgba(164, 171, 188, 100);
+  
   height: auto;
   margin: 15px auto;
   position: relative;
@@ -430,7 +436,7 @@ ul#nav li a:hover {
 }
 
 #about .button {
-  background: none repeat scroll 0 0  #D04E5B;
+  background: none repeat scroll 0 0  #F78B44;
   display: inline;
   margin-right: 10px;
   margin-top: 6px;
@@ -447,13 +453,14 @@ ul#nav li a:hover {
 }
 
 #about .bio-left {
-  background: rgba(0,0,0, 0.6);
+  background: #fff;
   height: 500px;
   padding: 60px 30px;
 }
 
 #about .main-col {
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
+  /*background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8); */
+  background: none repeat scroll 0 0 #F8F8FE;
   height: 500px;
   padding: 60px;
 }
@@ -473,12 +480,12 @@ ul#nav li a:hover {
 
 #about .download .button {
    margin-top: 6px;
-   background:  #D04E5B;
+   background:  #F78B44;
 }
 
 #about .download .button:hover {
    background: #fff;
-   color: #2B2B2B;
+   color: #384D82;
 }
 #about .button i {
    margin-right: 15px;
@@ -491,7 +498,8 @@ ul#nav li a:hover {
 /* Portfolio Section */
 
 #portfolio {
-   background: url(../images/3.jpg) no-repeat fixed center center / cover;
+   /* background: url(../images/3.jpg) no-repeat fixed center center / cover; */
+   background: #081A3C;
    padding-top: 90px;
    padding-bottom: 60px;
 }
@@ -506,15 +514,15 @@ ul#nav li a:hover {
    border-color: #ddd;
 }
 
-#portfolio .section-title:after {
+/*#portfolio .section-title:after {
   background: transparent;
   content: "\f0b1";
   color: #fff;
-}
+}*/
 
 
 .btn-close {
-  background: #ed5565;
+  background: #F78B44;
 }
 
 
@@ -556,8 +564,8 @@ ul#nav li a:hover {
 	 -o-transition: opacity 0.3s ease-in-out;
 	 transition: opacity 0.3s ease-in-out;
 
-   background: #ed5565;
-   background: rgba(237,85,101, .9);
+   background: #F78B44;
+   background: rgba(247,139,68, .8); 
 }
 .portfolio-item .item-wrap .link-icon {
    display: block;
@@ -657,9 +665,10 @@ ul#nav li a:hover {
 	text-transform: uppercase;
    letter-spacing: 3px;
    cursor: pointer;
+   margin-right: 16px; 
 }
 .popup-modal a:hover {	color: #fff; }
-.popup-modal a.popup-modal-dismiss { margin-left: 24px; }
+/* .popup-modal a.popup-modal-dismiss { margin-left: 24px; } */
 
 
 /* fadein/fadeout effect for modal popup */
@@ -814,7 +823,7 @@ footer .social-links li:first-child { margin-left: 0; }
  	border-radius: 100%;
 }
 
-#go-top a:hover { background-color:#ed5565; }
+#go-top a:hover { background-color:#F78B44; }
 
 /* Scrollbar */
 
