--- a/css/default.css
+++ b/css/default.css
@@ -2,8 +2,8 @@
 /* a. Webfonts and Icon fonts
  ------------------------------------------------------------------ */
 @import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Raleway:400,700,900");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800");
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,700,900");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800");
 
 /* ------------------------------------------------------------------
 /* b. Reset
