Changed font colours for legibility

--- a/css/style.css
+++ b/css/style.css
@@ -631,24 +631,25 @@ ul#nav li a:hover {
 }
 .popup-modal .description-box { padding: 12px 36px 18px 36px; }
 .popup-modal .description-box h4 {
-   font: 15px/24px 'Open Sans', sans-serif;
+   font: 18px/32px 'Open Sans', sans-serif;
    font-weight: 700;
 	margin-bottom: 12px;
    color: #111;
 }
 .popup-modal .description-box p {
-	font: 14px/24px 'Open Sans', sans-serif;
-   color: #A1A1A1;
-   margin-bottom: 12px;
+	font: 13px/24px 'Open Sans', sans-serif;
+   color: #444446;
+   margin-bottom: 24px;
 }
 .popup-modal .description-box .categories {
    font: 11px/21px 'Open Sans', sans-serif;
    font-weight: 300;
-   color: #A1A1A1;
+   color: #6B6B72;
    text-transform: uppercase;
    letter-spacing: 2px;
    display: block;
    text-align: left;
+   margin-bottom: 4px;
 }
 .popup-modal .description-box .categories i {
    margin-right: 8px;
